--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "lottogame",
   "version": "1.0.0",
-  "description": "",
+  "description": "Typescript lottoGame",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --inspect=5858 -r ts-node/register ./src/app.ts",
+    "start:dev": "nodemon",
+    "build": "tsc",
+    "lint": "eslint src/"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Marcin Lech",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/inquirer": "^8.2.0",
+    "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.0",
+    "@typescript-eslint/parser": "^5.35.0",
+    "eslint": "^8.22.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "inquirer": "8.2.3"
+  }
 }
